[package]
name = "simplewiki"
version = "0.13.1"
authors = ["Sigurd Andreas Holsen <sighol@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
pulldown-cmark = "0.2.0"

rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_http = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", features = ["tera_templates"] }

regex = "1.1.2"
tera = "0.11.20"

serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
clap = "2.32.0"

includedir = "0.5.0"
phf = "0.7.24"

# Open web browse on startup
open = "1.2.2"

# web socket that auto refreshes the wiki when the files change.
ws = "0.8.0"
spmc = "0.2.2"
notify = "4.0.9"

error-chain = "0.12.0"
walkdir = "2.2.7"

stopwatch = "0.0.7"


[build-dependencies]
includedir_codegen = "0.5.0"
