[package]
name = "simplewiki"
version = "0.13.1"
authors = ["Sigurd Andreas Holsen <sighol@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
pulldown-cmark = "^0.6.1"

rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_http = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", features = ["tera_templates"] }

regex = "^1"
tera = "^1"

serde = "^1"
serde_derive = "^1"
serde_json = "^1"
clap = "^2"

includedir = "^0.5"
phf = "^0.7"

# Open web browse on startup
open = "^1"

# web socket that auto refreshes the wiki when the files change.
ws = "^0.8"
spmc = "^0.3"
notify = "^4"

error-chain = "^0.12"
walkdir = "^2"

stopwatch = "^0.0.7"


[build-dependencies]
includedir_codegen = "0.5.0"
